Switch to master branch to trigger actions

--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -3,7 +3,7 @@ env:
   DOCKER_HUB_REPO: 5ko5ko/telerikrepo
 on:
   push:
-    branches: ["main"]
+    branches: ["master"]
 jobs:
   pre-build:
     runs-on: ubuntu-latest
