--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -32,11 +32,11 @@ jobs:
       run: |
         python --version
         python -m pip install --upgrade pip
-        pip install pycodestyle
+        pip install pycodestyle art
     - name: Style with pycodestyle
       run: |
         python --version
-        pycodestyle *.py
+        pycodestyle test.py
   lint:
     needs: pre-build
     runs-on: ubuntu-latest
@@ -50,7 +50,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint==2.11.1
+        pip install art pylint==2.11.1
     - name: Lint with pylint
       run: |
         python lint_test.py   
@@ -64,6 +64,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.9
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install art
     - name: Build container
       run: echo "Building docker image"
     - name: Upload artifact
@@ -83,7 +87,8 @@ jobs:
         python-version: 3.9
     - name: Unit testing
       run: |
-        python3 -m doctest factorial.py
+        pip install art
+        python3 -m doctest test.py
   SAST:
     needs: unit-test
     runs-on: ubuntu-latest
@@ -108,6 +113,7 @@ jobs:
           args: --severity-threshold=high
   upload:
     name: Upload custom NGINX image to docker hub repo
+    needs: SAST
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
