--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -87,6 +87,7 @@ jobs:
         python-version: 3.9
     - name: Unit testing
       run: |
+        python -m pip install --upgrade pip
         pip install art
         python3 -m doctest test.py
   SAST:
@@ -105,9 +106,11 @@ jobs:
     needs: unit-test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - name: Check out repo code
+        uses: actions/checkout@v2
+#      - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/python-3.8@master
+        uses: snyk/actions/python@master
 #        continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
