--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -55,25 +55,25 @@ jobs:
       run: |
         python lint_test.py   
   build:
-#this job is not actually needed. Just left it as upload-artifact repo demonstration
-    needs: [style,lint]
-    runs-on: ubuntu-latest
-    steps:
-    - name: Check out repo code
-      uses: actions/checkout@v2
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install art
-    - name: Upload artifact
-      uses: actions/upload-artifact@v1.0.0
-      with:
-        name: test.py
-        path: test.py
+# this job is not actually needed. Just left it as upload-artifact repo demonstration
+#     needs: [style,lint]
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: Check out repo code
+#       uses: actions/checkout@v2
+#     - name: Set up Python 3.9
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: 3.9
+#     - name: Install dependencies
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install art
+#     - name: Upload artifact
+#       uses: actions/upload-artifact@v1.0.0
+#       with:
+#         name: test.py
+#         path: test.py
   unit-test:
     needs: [style,lint]
     runs-on: ubuntu-latest
@@ -86,6 +86,8 @@ jobs:
         python-version: 3.9
     - name: Unit testing
       run: |
+        python -m pip install --upgrade pip
+        pip install art
         python3 -m doctest test.py
   SAST:
     needs: unit-test
