--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -54,26 +54,26 @@ jobs:
     - name: Lint with pylint
       run: |
         python lint_test.py   
-# build:
-# this job is not actually needed. Just left it as upload-artifact repo demonstration
-#     needs: [style,lint]
-#     runs-on: ubuntu-latest
-#     steps:
-#     - name: Check out repo code
-#       uses: actions/checkout@v2
-#     - name: Set up Python 3.9
-#       uses: actions/setup-python@v2
-#       with:
-#         python-version: 3.9
-#     - name: Install dependencies
-#       run: |
-#         python -m pip install --upgrade pip
-#         pip install art
-#     - name: Upload artifact
-#       uses: actions/upload-artifact@v1.0.0
-#       with:
-#         name: test.py
-#         path: test.py
+  # build:
+  # # this job is not actually needed. Just left it as upload-artifact repo demonstration
+  #     needs: [style,lint]
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #     - name: Check out repo code
+  #       uses: actions/checkout@v2
+  #     - name: Set up Python 3.9
+  #       uses: actions/setup-python@v2
+  #       with:
+  #         python-version: 3.9
+  #     - name: Install dependencies
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         pip install art
+  #     - name: Upload artifact
+  #       uses: actions/upload-artifact@v1.0.0
+  #       with:
+  #         name: test.py
+  #         path: test.py
   unit-test:
     needs: [style,lint]
     runs-on: ubuntu-latest
@@ -116,26 +116,26 @@ jobs:
           args: --severity-threshold=high
       - name: Print dir workdir contents
         run: |
-          ls -lsa /github/workspace
-  upload:
-    name: Upload custom NGINX image to docker hub repo
-    needs: SAST
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    steps:
-      - uses: actions/checkout@v2
-      - name: Build
-        run: docker build -t $DOCKER_HUB_REPO:nginx-${GITHUB_SHA:0:8} -t $DOCKER_HUB_REPO:latest -f nginx.Dockerfile .
-      - name: Push to docker repo
-        run: |
-          docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password ${{ secrets.DOCKER_HUB_PASSWORD }}
-          docker image push --all-tags $DOCKER_HUB_REPO
-  deploy:
-    needs: SAST
-    runs-on: ubuntu-latest
-    steps:
-    - name: Deploy
-      run: echo "Deploying to cluster"
+          ls -lsa /home/runner/work/telerik-fp/telerik-fp
+  # upload:
+  #   name: Upload custom NGINX image to docker hub repo
+  #   needs: SAST
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 10
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Build
+  #       run: docker build -t $DOCKER_HUB_REPO:nginx-${GITHUB_SHA:0:8} -t $DOCKER_HUB_REPO:latest -f nginx.Dockerfile .
+  #     - name: Push to docker repo
+  #       run: |
+  #         docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password ${{ secrets.DOCKER_HUB_PASSWORD }}
+  #         docker image push --all-tags $DOCKER_HUB_REPO
+  # deploy:
+  #   needs: SAST
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: Deploy
+  #     run: echo "Deploying to cluster"
 #   DAST:
 #     needs: deploy
 #     runs-on: ubuntu-latest
