--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -130,26 +130,51 @@ jobs:
   #       run: |
   #         docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password ${{ secrets.DOCKER_HUB_PASSWORD }}
   #         docker image push --all-tags $DOCKER_HUB_REPO
-  DAST:
-    name: StackHawk DAST scan
-#    needs: upload
+  push_manifest:
+    name: Update and push the new K manifest
+    # needs: upload
     runs-on: ubuntu-latest
     steps:
-    - name: Run the newly built app container
-      run: |
-        docker run -p 8080:80 -d 5ko5ko/telerikrepo:latest
-    - name: Check out repo code
-      uses: actions/checkout@v2
-    - name: Run hawk scan
-      uses: stackhawk/hawkscan-action@v1.3.2
-      with:
-        apiKey: ${{ secrets.HAWK_API_KEY }}
-  deploy:
-    needs: DAST
-    runs-on: ubuntu-latest
-    steps:
-    - name: Deploy
-      run: echo "Deploying to cluster. This is a dummy deployment. Just text ouput and no actual deployment."
+      - name: Checkout config repo
+        uses: actions/checkout@v2
+        with:
+          repository: npghub/telerik-fp-config
+          persist-credentials: false
+          fetch-depth: 0
+      - name: Update config repo
+        env:
+          GITHUB_USERNAME: npghub
+          GITHUB_EMAIL: petko@nitropack.io
+        run: |
+          sed -i "s/$(grep 5ko5ko\/telerikrepo k8s/deploy_k8.yml | awk -F':' '{print $3}')/latest/g" k8s/deploy_k8.yml
+          git config --local user.email "$GITHUB_EMAIL"
+          git config --local user.name "$GITHUB_USERNAME"
+          git commit -m "Update K manifest" -a
+      - name: Push changes to config repo
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GIT_AUTOPUSH}}
+          branch: ${{ github.ref }}
+#   DAST:
+#     name: StackHawk DAST scan
+# #    needs: upload
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: Run the newly built app container
+#       run: |
+#         docker run -p 8080:80 -d 5ko5ko/telerikrepo:latest
+#     - name: Check out repo code
+#       uses: actions/checkout@v2
+#     - name: Run hawk scan
+#       uses: stackhawk/hawkscan-action@v1.3.2
+#       with:
+#         apiKey: ${{ secrets.HAWK_API_KEY }}
+#   deploy:
+#     needs: DAST
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: Deploy
+#       run: echo "Deploying to cluster. This is a dummy deployment. Just text ouput and no actual deployment."
   # DAST:
   #   needs: deploy
   #   runs-on: ubuntu-latest
