--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -140,14 +140,16 @@ jobs:
         with:
           repository: npghub/telerik-fp-config
           persist-credentials: false
-          token: ${{ secrets.GIT_AUTOPUSH}}
+          # token: ${{ secrets.GIT_AUTOPUSH}}
           # fetch-depth: 0
       - name: Update config repo
         env:
           GITHUB_USERNAME: npghub
           GITHUB_EMAIL: petko@nitropack.io
         run: |
+          git pull origin master
           sed -i "s/$(grep 5ko5ko\/telerikrepo k8s/deploy_k8.yml | awk -F':' '{print $3}')/latest/g" k8s/deploy_k8.yml
+          cat k8s/deploy_k8.yml
           git config --local user.email "$GITHUB_EMAIL"
           git config --local user.name "$GITHUB_USERNAME"
           git commit -m "Update K manifest" -a
