--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -1,6 +1,7 @@
 name: Telerik Final Project
 env:
   DOCKER_HUB_REPO: 5ko5ko/telerikrepo
+  DOCKER_IMAGE_TAG: nginx-4812838c
 on:
   push:
     branches: ["master"]
@@ -125,7 +126,9 @@ jobs:
   #   steps:
   #     - uses: actions/checkout@v2
   #     - name: Build
-  #       run: docker build -t $DOCKER_HUB_REPO:nginx-${GITHUB_SHA:0:8} -t $DOCKER_HUB_REPO:latest -f nginx.Dockerfile .
+  #       env:
+  #         DOCKER_IMAGE_TAG: nginx-${GITHUB_SHA:0:8}
+  #       run: docker build -t $DOCKER_HUB_REPO:$DOCKER_IMAGE_TAG -t $DOCKER_HUB_REPO:latest -f nginx.Dockerfile .
   #     - name: Push to docker repo
   #       run: |
   #         docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password ${{ secrets.DOCKER_HUB_PASSWORD }}
@@ -147,7 +150,7 @@ jobs:
           GITHUB_USERNAME: npghub
           GITHUB_EMAIL: petko@nitropack.io
         run: |
-          sed -i "s/$(grep 5ko5ko\/telerikrepo k8s/deploy_k8.yml | awk -F':' '{print $3}')/latest/g" k8s/deploy_k8.yml
+          sed -i "s/$(grep 5ko5ko\/telerikrepo k8s/deploy_k8.yml | awk -F':' '{print $3}')/$DOCKER_IMAGE_TAG/g" k8s/deploy_k8.yml
           cat k8s/deploy_k8.yml
           git config --local user.email "$GITHUB_EMAIL"
           git config --local user.name "$GITHUB_USERNAME"
