--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -126,7 +126,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build
         env:
-          DOCKER_IMAGE_TAG: ${GITHUB_SHA:0:8}
+          DOCKER_IMAGE_TAG: ${{ GITHUB_SHA:0:8 }}
         run: docker build -t $DOCKER_HUB_REPO:$DOCKER_IMAGE_TAG -t $DOCKER_HUB_REPO:latest -f nginx.Dockerfile .
       - name: Push to docker repo
         run: |
