--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -124,9 +124,9 @@ jobs:
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v2
+      - name: Set env
+        run: echo "::set-env name=DOCKER_IMAGE_TAG::{GITHUB_SHA:0:8}"
       - name: Build
-        env:
-          DOCKER_IMAGE_TAG: ${{ GITHUB_SHA:0:8 }}
         run: docker build -t $DOCKER_HUB_REPO:$DOCKER_IMAGE_TAG -t $DOCKER_HUB_REPO:latest -f nginx.Dockerfile .
       - name: Push to docker repo
         run: |
