--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -125,7 +125,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set env
-        run: echo "DOCKER_IMAGE_TAG=${GITHUB_SHA:0:8}" >> $DOCKER_IMAGE_TAG
+        run: echo "DOCKER_IMAGE_TAG=${GITHUB_SHA:0:8}"
       - name: Build
         run: docker build -t $DOCKER_HUB_REPO:$DOCKER_IMAGE_TAG -t $DOCKER_HUB_REPO:latest -f nginx.Dockerfile .
       - name: Push to docker repo
@@ -134,7 +134,7 @@ jobs:
           docker image push --all-tags $DOCKER_HUB_REPO
   push_manifest:
     name: Update and push the new K manifest
-    # needs: upload
+    needs: upload
     runs-on: ubuntu-latest
     steps:
       - name: Checkout config repo
