--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -4,6 +4,8 @@ env:
 on:
   push:
     branches: ["master"]
+    paths-ignore:
+      - '**.md'
 jobs:
   pre-build:
     runs-on: ubuntu-latest
@@ -132,30 +134,31 @@ jobs:
         run: |
           docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password ${{ secrets.DOCKER_HUB_PASSWORD }}
           docker image push --all-tags $DOCKER_HUB_REPO
-  # push_manifest:
-  #   name: Update and push the new K manifest
-  #   needs: upload
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout config repo
-  #       uses: actions/checkout@v2
-  #       with:
-  #         repository: npghub/telerik-fp-config
-  #         persist-credentials: false
-  #         token: ${{ secrets.GIT_AUTOPUSH}}
-  #         # fetch-depth: 0
-  #     - name: Update config repo
-  #       env:
-  #         GITHUB_USERNAME: npghub
-  #         GITHUB_EMAIL: petko@nitropack.io
-  #       run: |
-  #         sed -i "s/$(grep 5ko5ko\/telerikrepo k8s/deploy_k8.yml | awk -F':' '{print $3}')/${{ env.DOCKER_IMAGE_TAG }}/g" k8s/deploy_k8.yml
-  #         cat k8s/deploy_k8.yml
-  #         git config --local user.email "$GITHUB_EMAIL"
-  #         git config --local user.name "$GITHUB_USERNAME"
-  #         git remote set-url origin https://$GITHUB_USERNAME:${{ secrets.GIT_AUTOPUSH}}@github.com/$GITHUB_USERNAME/telerik-fp-config.git
-  #         git commit -am "Update K manifest"
-  #         git push
+  push_manifest:
+    name: Update and push the new K manifest
+    needs: upload
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout config repo
+        uses: actions/checkout@v2
+        with:
+          repository: npghub/telerik-fp-config
+          persist-credentials: false
+          token: ${{ secrets.GIT_AUTOPUSH}}
+          # fetch-depth: 0
+      - name: Update config repo
+        env:
+          GITHUB_USERNAME: npghub
+          GITHUB_EMAIL: petko@nitropack.io
+          DOCKER_IMAGE_TAG: latest
+        run: |
+          sed -i "s/$(grep 5ko5ko\/telerikrepo k8s/deploy_k8.yml | awk -F':' '{print $3}')/$DOCKER_IMAGE_TAG/g" k8s/deploy_k8.yml
+          cat k8s/deploy_k8.yml
+          git config --local user.email "$GITHUB_EMAIL"
+          git config --local user.name "$GITHUB_USERNAME"
+          git remote set-url origin https://$GITHUB_USERNAME:${{ secrets.GIT_AUTOPUSH}}@github.com/$GITHUB_USERNAME/telerik-fp-config.git
+          git commit -am "Update K manifest"
+          git push
   DAST:
     name: StackHawk DAST scan
     needs: upload
