--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -155,6 +155,7 @@ jobs:
           GITHUB_USERNAME: npghub
           GITHUB_EMAIL: petko@nitropack.io
         run: |
+          echo $DOCKER_IMAGE_TAG
           sed -i "s/$(grep 5ko5ko\/telerikrepo k8s/deploy_k8.yml | awk -F':' '{print $3}')/${{ env.DOCKER_IMAGE_TAG }}/g" k8s/deploy_k8.yml
           cat k8s/deploy_k8.yml
           git config --local user.email "$GITHUB_EMAIL"
