--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -143,6 +143,8 @@ jobs:
         uses: actions/checkout@v2
         env: 
           DOCKER_IMAGE_TAG: ${GITHUB_SHA:0:8}
+        run: |
+          echo $DOCKER_IMAGE_TAG
       - name: Checkout config repo
         uses: actions/checkout@v2
         with:
