--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -145,7 +145,7 @@ jobs:
           DOCKER_IMAGE_TAG: ${GITHUB_SHA:0:8}
       - name: Echo tag
         run: |
-          echo $DOCKER_IMAGE_TAG
+          echo ${{ env.DOCKER_IMAGE_TAG }}
       - name: Checkout config repo
         uses: actions/checkout@v2
         with:
