--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -124,6 +124,8 @@ jobs:
     # needs: SAST
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    outputs:
+      tagoutput: ${{ steps.build_get_tag.outputs.tag  }}
     steps:
       - name: Checkout repo code
         uses: actions/checkout@v2
@@ -140,12 +142,12 @@ jobs:
       #     docker image push --all-tags $DOCKER_HUB_REPO
   push_manifest:
     name: Update and push the new K manifest
-    needs: upload
     runs-on: ubuntu-latest
+    needs: upload
     steps:
       - name: Echo tag
         run: |
-          echo ${{ jobs.upload.steps.build_get_tag.outputs.tag }}
+          echo ${{ needs.upload.outputs.tagoutput }}
       # - name: Checkout config repo
       #   uses: actions/checkout@v2
       #   with:
