--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -160,13 +160,12 @@ jobs:
           GITHUB_USERNAME: npghub
           GITHUB_EMAIL: petko@nitropack.io
         run: |
-          echo $DOCKER_IMAGE_TAG
-          sed -i "s/$(grep 5ko5ko\/telerikrepo k8s/deploy_k8.yml | awk -F':' '{print $3}')/${{ env.DOCKER_IMAGE_TAG }}/g" k8s/deploy_k8.yml
+          sed -i "s/$(grep 5ko5ko\/telerikrepo k8s/deploy_k8.yml | awk -F':' '{print $3}')/${{ needs.upload.outputs.tagoutput }}/g" k8s/deploy_k8.yml
           cat k8s/deploy_k8.yml
           git config --local user.email "$GITHUB_EMAIL"
           git config --local user.name "$GITHUB_USERNAME"
           git remote set-url origin https://$GITHUB_USERNAME:${{ secrets.GIT_AUTOPUSH}}@github.com/$GITHUB_USERNAME/telerik-fp-config.git
-          git commit -am "Update K manifest"
+          git commit -am "${{ needs.upload.outputs.tagoutput }}: Update K manifest"
           git push
   DAST:
     name: StackHawk DAST scan
