Ammend needs to include upload job

--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -157,7 +157,7 @@ jobs:
   push_manifest:
     name: Update and push the new K manifest
     runs-on: ubuntu-latest
-    needs: DAST
+    needs: [upload,DAST]
     steps:
       - name: Echo tag
         run: |
