--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -168,7 +168,7 @@ jobs:
       - name: Checkout config repo
         uses: actions/checkout@v2
         with:
-          repository: "${{ secrets.GHUB_USERNAME }}/${CONFIG_REPO}"
+          repository: "${{ secrets.GHUB_USERNAME }}/${{ env.CONFIG_REPO }}"
           persist-credentials: false
           token: ${{ secrets.GIT_AUTOPUSH}}
           # fetch-depth: 0
