--- a/.github/workflows/steps.yml
+++ b/.github/workflows/steps.yml
@@ -175,6 +175,7 @@ jobs:
       - name: Update config repo
         run: |
           cat ${{ env.MANIFEST_FILE }}
+          grep '${{ env.MANIFEST_FILE }}' ${{ env.MANIFEST_FILE }}
           sed -i "s/$(grep ${{ env.MANIFEST_FILE }} ${{ env.MANIFEST_FILE }} | awk -F':' '{print $3}')/${{ needs.upload.outputs.tagoutput }}/g" ${{ env.MANIFEST_FILE }}
           git config --local user.email "${{ secrets.GHUB_EMAIL }}"
           git config --local user.name "${{ secrets.GHUB_USERNAME }}"
